# openAICG2

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: _config.yml  _toc.yml  api_functionterm.rst  api_model.rst  conf.py  installation.md  intro.md
docs/.ipynb_checkpoints/: Example 1. Compute the transition temperatrue of sh3 based on one bead model-checkpoint.ipynb  main_sh3-checkpoint.ipynb
docs/_build/doctrees/: api_enhance_sampling.doctree  api_functionterm.doctree  api_model.doctree  api_utils.doctree  environment.pickle  installation.doctree  intro.doctree  main_amyloid42_gyration.doctree  main_sh3.doctree
docs/_build/html/: .buildinfo  api_enhance_sampling.html  api_functionterm.html  api_model.html  api_utils.html  genindex.html  installation.html  intro.html  main_amyloid42_gyration.html  main_sh3.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/jupyter_execute/: main_amyloid42_gyration.ipynb  (+1 more)
forcefield/: __init__.py  aicgmodel.py
forcefield/functionterms/: angle_terms.py  bond_terms.py  umbrella_sampling.py
forcefield/para/: 2nao_9chain_l1p0_1p02p2_cb2p2_full_def_0_fib_to_openmm.info  2nao_9chain_l1p0_1p02p2_cb2p2_full_def_0_to_openmm.info  kh.para
openaicg2/forcefield/: aicgmodel.py  amyloid.xml  simulationsystem.py
openaicg2/utils/: parser_exv_params.py  parser_kh_params.py  parser_ninfo.py
tests/: test_aicgdihd.py  test_flex_ang_dihd_potential.py  test_native_dihd_term.py  test_normal_tortion_angle.py  test_oriented_dependent_Hbond.py
utils/: __init__.py  gene_psf.py  parser_flp_para.py  redefinetop.py
(+48 files in other folders)
